--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Erick Cuevas Fernández">
-<meta name="dcterms.date" content="2025-11-11">
+<meta name="dcterms.date" content="2025-11-12">
 
 <title>Genotipificación de Enfermedades en Perros</title>
 <style>
@@ -70,16 +70,16 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <link href="index_files/libs/quarto-html/quarto-syntax-highlighting-37eea08aefeeee20ff55810ff984fec1.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="index_files/libs/bootstrap/bootstrap.min.js"></script>
 <link href="index_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="index_files/libs/bootstrap/bootstrap-588c2739b609de765df2f652a93054a0.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="index_files/libs/bootstrap/bootstrap-b4c17efc9eb020ee2865a89bb1a6d5ac.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script src="index_files/libs/kePrint-0.0.1/kePrint.js"></script>
 <link href="index_files/libs/lightable-0.0.1/lightable.css" rel="stylesheet">
 <link href="index_files/libs/htmltools-fill-0.5.8.1/fill.css" rel="stylesheet">
 <script src="index_files/libs/htmlwidgets-1.6.4/htmlwidgets.js"></script>
-<script src="index_files/libs/plotly-binding-4.11.0/plotly.js"></script>
+<script src="index_files/libs/plotly-binding-4.10.4/plotly.js"></script>
 <script src="index_files/libs/typedarray-0.1/typedarray.min.js"></script>
 <script src="index_files/libs/jquery-3.5.1/jquery.min.js"></script>
-<link href="index_files/libs/crosstalk-1.2.2/css/crosstalk.min.css" rel="stylesheet">
-<script src="index_files/libs/crosstalk-1.2.2/js/crosstalk.min.js"></script>
+<link href="index_files/libs/crosstalk-1.2.1/css/crosstalk.min.css" rel="stylesheet">
+<script src="index_files/libs/crosstalk-1.2.1/js/crosstalk.min.js"></script>
 <link href="index_files/libs/plotly-htmlwidgets-css-2.11.1/plotly-htmlwidgets.css" rel="stylesheet">
 <script src="index_files/libs/plotly-main-2.11.1/plotly-latest.min.js"></script>
 <link href="index_files/libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet">
@@ -191,7 +191,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 11, 2025</p>
+      <p class="date">November 12, 2025</p>
     </div>
   </div>
   
@@ -416,8 +416,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <span id="cb3-30"><a href="#cb3-30" aria-hidden="true" tabindex="-1"></a><span class="fu">ggplotly</span>(p1)</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </details>
 <div class="cell-output-display">
-<div class="plotly html-widget html-fill-item" id="htmlwidget-e49da6067eab1c83dc8c" style="width:100%;height:390px;"></div>
-<script type="application/json" data-for="htmlwidget-e49da6067eab1c83dc8c">{"x":{"data":[{"x":[2024,2025,2026,2027,2028,2029,2030],"y":[28.199999999999999,30.600000000000001,33.200000000000003,36,39,42.200000000000003,45.600000000000001],"text":["Año: 2024<br />Valor: 28.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2025<br />Valor: 30.6<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2026<br />Valor: 33.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2027<br />Valor: 36.0<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2028<br />Valor: 39.0<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2029<br />Valor: 42.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2030<br />Valor: 45.6<br />Región: Latinoamérica<br />Región: Latinoamérica"],"type":"scatter","mode":"lines+markers","line":{"width":4.5354330708661417,"color":"rgba(16,185,129,1)","dash":"solid"},"hoveron":"points","name":"Latinoamérica","legendgroup":"Latinoamérica","showlegend":true,"xaxis":"x","yaxis":"y","hoverinfo":"text","marker":{"autocolorscale":false,"color":"rgba(16,185,129,1)","opacity":1,"size":11.338582677165356,"symbol":"circle","line":{"width":1.8897637795275593,"color":"rgba(16,185,129,1)"}},"frame":null},{"x":[2024,2025,2026,2027,2028,2029,2030],"y":[7.5999999999999996,8.3000000000000007,9.0999999999999996,9.9000000000000004,10.800000000000001,11.800000000000001,12.9],"text":["Año: 2024<br />Valor:  7.6<br />Región: México<br />Región: México","Año: 2025<br />Valor:  8.3<br />Región: México<br />Región: México","Año: 2026<br />Valor:  9.1<br />Región: México<br />Región: México","Año: 2027<br />Valor:  9.9<br />Región: México<br />Región: México","Año: 2028<br />Valor: 10.8<br />Región: México<br />Región: México","Año: 2029<br />Valor: 11.8<br />Región: México<br />Región: México","Año: 2030<br />Valor: 12.9<br />Región: México<br />Región: México"],"type":"scatter","mode":"lines+markers","line":{"width":4.5354330708661417,"color":"rgba(59,130,246,1)","dash":"solid"},"hoveron":"points","name":"México","legendgroup":"México","showlegend":true,"xaxis":"x","yaxis":"y","hoverinfo":"text","marker":{"autocolorscale":false,"color":"rgba(59,130,246,1)","opacity":1,"size":11.338582677165356,"symbol":"circle","line":{"width":1.8897637795275593,"color":"rgba(59,130,246,1)"}},"frame":null}],"layout":{"margin":{"t":44.559568285595681,"r":7.3059360730593621,"b":37.260273972602747,"l":48.949771689497723},"paper_bgcolor":"rgba(255,255,255,1)","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724},"title":{"text":"<b> Crecimiento del Mercado de Pruebas de ADN para Mascotas <\/b>","font":{"color":"rgba(0,0,0,1)","family":"","size":21.253632212536321},"x":0,"xref":"paper"},"xaxis":{"domain":[0,1],"automargin":true,"type":"linear","autorange":false,"range":[2023.7,2030.3],"tickmode":"array","ticktext":["2024","2025","2026","2027","2028","2029","2030"],"tickvals":[2024,2025,2026,2027,2028,2029,2030],"categoryorder":"array","categoryarray":["2024","2025","2026","2027","2028","2029","2030"],"nticks":null,"ticks":"","tickcolor":null,"ticklen":3.6529680365296811,"tickwidth":0,"showticklabels":true,"tickfont":{"color":"rgba(77,77,77,1)","family":"","size":11.68949771689498},"tickangle":-0,"showline":false,"linecolor":null,"linewidth":0,"showgrid":true,"gridcolor":"rgba(235,235,235,1)","gridwidth":0,"zeroline":false,"anchor":"y","title":{"text":"Año","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}},"hoverformat":".2f"},"yaxis":{"domain":[0,1],"automargin":true,"type":"linear","autorange":false,"range":[5.6999999999999993,47.5],"tickmode":"array","ticktext":["$10M","$20M","$30M","$40M"],"tickvals":[10,20,30,40],"categoryorder":"array","categoryarray":["$10M","$20M","$30M","$40M"],"nticks":null,"ticks":"","tickcolor":null,"ticklen":3.6529680365296811,"tickwidth":0,"showticklabels":true,"tickfont":{"color":"rgba(77,77,77,1)","family":"","size":11.68949771689498},"tickangle":-0,"showline":false,"linecolor":null,"linewidth":0,"showgrid":true,"gridcolor":"rgba(235,235,235,1)","gridwidth":0,"zeroline":false,"anchor":"x","title":{"text":"Valor del Mercado (USD Millones)","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}},"hoverformat":".2f"},"shapes":[{"type":"rect","fillcolor":null,"line":{"color":null,"width":0,"linetype":[]},"yref":"paper","xref":"paper","layer":"below","x0":0,"x1":1,"y0":0,"y1":1}],"showlegend":true,"legend":{"bgcolor":null,"bordercolor":null,"borderwidth":0,"font":{"color":"rgba(0,0,0,1)","family":"","size":11.68949771689498},"title":{"text":"Región","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}}},"hovermode":"closest","barmode":"relative"},"config":{"doubleClick":"reset","modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"source":"A","attrs":{"42fbddb182a8":{"x":{},"y":{},"colour":{},"type":"scatter"},"42fbd7e664642":{"x":{},"y":{},"colour":{}}},"cur_data":"42fbddb182a8","visdat":{"42fbddb182a8":["function (y) ","x"],"42fbd7e664642":["function (y) ","x"]},"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-aa170c62180c36587703" style="width:100%;height:390px;"></div>
+<script type="application/json" data-for="htmlwidget-aa170c62180c36587703">{"x":{"data":[{"x":[2024,2025,2026,2027,2028,2029,2030],"y":[28.199999999999999,30.600000000000001,33.200000000000003,36,39,42.200000000000003,45.600000000000001],"text":["Año: 2024<br />Valor: 28.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2025<br />Valor: 30.6<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2026<br />Valor: 33.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2027<br />Valor: 36.0<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2028<br />Valor: 39.0<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2029<br />Valor: 42.2<br />Región: Latinoamérica<br />Región: Latinoamérica","Año: 2030<br />Valor: 45.6<br />Región: Latinoamérica<br />Región: Latinoamérica"],"type":"scatter","mode":"lines+markers","line":{"width":4.5354330708661417,"color":"rgba(16,185,129,1)","dash":"solid"},"hoveron":"points","name":"Latinoamérica","legendgroup":"Latinoamérica","showlegend":true,"xaxis":"x","yaxis":"y","hoverinfo":"text","marker":{"autocolorscale":false,"color":"rgba(16,185,129,1)","opacity":1,"size":11.338582677165356,"symbol":"circle","line":{"width":1.8897637795275593,"color":"rgba(16,185,129,1)"}},"frame":null},{"x":[2024,2025,2026,2027,2028,2029,2030],"y":[7.5999999999999996,8.3000000000000007,9.0999999999999996,9.9000000000000004,10.800000000000001,11.800000000000001,12.9],"text":["Año: 2024<br />Valor:  7.6<br />Región: México<br />Región: México","Año: 2025<br />Valor:  8.3<br />Región: México<br />Región: México","Año: 2026<br />Valor:  9.1<br />Región: México<br />Región: México","Año: 2027<br />Valor:  9.9<br />Región: México<br />Región: México","Año: 2028<br />Valor: 10.8<br />Región: México<br />Región: México","Año: 2029<br />Valor: 11.8<br />Región: México<br />Región: México","Año: 2030<br />Valor: 12.9<br />Región: México<br />Región: México"],"type":"scatter","mode":"lines+markers","line":{"width":4.5354330708661417,"color":"rgba(59,130,246,1)","dash":"solid"},"hoveron":"points","name":"México","legendgroup":"México","showlegend":true,"xaxis":"x","yaxis":"y","hoverinfo":"text","marker":{"autocolorscale":false,"color":"rgba(59,130,246,1)","opacity":1,"size":11.338582677165356,"symbol":"circle","line":{"width":1.8897637795275593,"color":"rgba(59,130,246,1)"}},"frame":null}],"layout":{"margin":{"t":49.430192334301921,"r":7.3059360730593621,"b":42.130898021308994,"l":48.949771689497723},"font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724},"title":{"text":"<b> Crecimiento del Mercado de Pruebas de ADN para Mascotas <\/b>","font":{"color":"rgba(0,0,0,1)","family":"","size":21.253632212536321},"x":0,"xref":"paper"},"xaxis":{"domain":[0,1],"automargin":true,"type":"linear","autorange":false,"range":[2023.7,2030.3],"tickmode":"array","ticktext":["2024","2025","2026","2027","2028","2029","2030"],"tickvals":[2024,2025,2026,2027,2028,2029,2030],"categoryorder":"array","categoryarray":["2024","2025","2026","2027","2028","2029","2030"],"nticks":null,"ticks":"","tickcolor":null,"ticklen":3.6529680365296811,"tickwidth":0,"showticklabels":true,"tickfont":{"color":"rgba(77,77,77,1)","family":"","size":11.68949771689498},"tickangle":-0,"showline":false,"linecolor":null,"linewidth":0,"showgrid":true,"gridcolor":"rgba(235,235,235,1)","gridwidth":0.66417600664176002,"zeroline":false,"anchor":"y","title":{"text":"Año","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}},"hoverformat":".2f"},"yaxis":{"domain":[0,1],"automargin":true,"type":"linear","autorange":false,"range":[5.6999999999999993,47.5],"tickmode":"array","ticktext":["$10M","$20M","$30M","$40M"],"tickvals":[10,20,30,40],"categoryorder":"array","categoryarray":["$10M","$20M","$30M","$40M"],"nticks":null,"ticks":"","tickcolor":null,"ticklen":3.6529680365296811,"tickwidth":0,"showticklabels":true,"tickfont":{"color":"rgba(77,77,77,1)","family":"","size":11.68949771689498},"tickangle":-0,"showline":false,"linecolor":null,"linewidth":0,"showgrid":true,"gridcolor":"rgba(235,235,235,1)","gridwidth":0.66417600664176002,"zeroline":false,"anchor":"x","title":{"text":"Valor del Mercado (USD Millones)","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}},"hoverformat":".2f"},"shapes":[{"type":"rect","fillcolor":null,"line":{"color":null,"width":0,"linetype":[]},"yref":"paper","xref":"paper","x0":0,"x1":1,"y0":0,"y1":1}],"showlegend":true,"legend":{"bgcolor":null,"bordercolor":null,"borderwidth":0,"font":{"color":"rgba(0,0,0,1)","family":"","size":11.68949771689498},"title":{"text":"Región","font":{"color":"rgba(0,0,0,1)","family":"","size":14.611872146118724}}},"hovermode":"closest","barmode":"relative"},"config":{"doubleClick":"reset","modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"source":"A","attrs":{"3b7e42ab8168":{"x":{},"y":{},"colour":{},"type":"scatter"},"3b7e64dbd327":{"x":{},"y":{},"colour":{}}},"cur_data":"3b7e42ab8168","visdat":{"3b7e42ab8168":["function (y) ","x"],"3b7e64dbd327":["function (y) ","x"]},"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 <p>Proyección de crecimiento del mercado de pruebas de ADN para mascotas (2024-2030)</p>
 </div>
 </div>
@@ -553,9 +553,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 data-number="3.1" class="anchored" data-anchor-id="factores-políticos"><span class="header-section-number">3.1</span> Factores Políticos</h2>
 <p><strong>Regulaciones y Normativas:</strong></p>
 <ul>
-<li><strong>SENASICA</strong> (Servicio Nacional de Sanidad, Inocuidad y Calidad Agroalimentaria) supervisa todos los productos y servicios veterinarios.</li>
-<li><strong>NOM-012-SAG/ZOO-2020</strong>: Regula especificaciones para productos de uso animal, incluyendo pruebas diagnósticas genéticas.</li>
-<li><strong>Ley Federal de Sanidad Animal</strong> y su Reglamento (2012) establecen lineamientos para diagnóstico y prevención de enfermedades.</li>
+<li><a href="https://www.gob.mx/senasica"><strong>SENASICA</strong></a> (Servicio Nacional de Sanidad, Inocuidad y Calidad Agroalimentaria) supervisa todos los productos y servicios veterinarios.</li>
+<li><a href="https://www.gob.mx/cms/uploads/attachment/file/869678/oficial.pdf"><strong>NOM-012-SAG/ZOO-2020</strong></a>: Regula especificaciones para productos de uso animal, incluyendo pruebas diagnósticas genéticas. Especificanmente el punto <code>8.2.3.4</code>. <strong>Indicaciones</strong>: Se deben expresar en forma clara y con terminología de uso común, las condiciones de manejo y conservación del producto, especie(s) animal(es), etapa, edad o fin zootécnico, espectro de acción y otras condiciones relevantes. En el caso de kits diagnósticos se deben acompañar de instructivos que expresen claramente su uso e interpretación de resultados.</li>
+<li><a href="https://www.gob.mx/senasica/documentos/ley-federal-de-sanidad-animal"><strong>Ley Federal de Sanidad Animal</strong></a> y su Reglamento (2012) establecen lineamientos para diagnóstico y prevención de enfermedades.</li>
 </ul>
 <p><strong>Políticas de Bienestar Animal:</strong></p>
 <p>En julio de 2024, Humane Society International/México lanzó un programa piloto en Aguascalientes con clínicas veterinarias móviles y campañas educativas, demostrando el compromiso gubernamental con el bienestar animal.</p>
@@ -658,7 +658,58 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <section id="factores-tecnológicos" class="level2" data-number="3.4">
 <h2 data-number="3.4" class="anchored" data-anchor-id="factores-tecnológicos"><span class="header-section-number">3.4</span> Factores Tecnológicos</h2>
 <p><strong>Avances en Genética Canina:</strong></p>
-<p>Las tecnologías actuales permiten identificar más de 350 razas y detectar múltiples enfermedades hereditarias. Empresas como Embark y Wisdom Panel han desarrollado bases de datos genéticas extensas.</p>
+<p>Las tecnologías actuales permiten identificar más de 350 razas y detectar múltiples enfermedades hereditarias. Empresas como <a href="https://embarkvet.com/">Embark</a> (solo cuenta con servicio en USA) y <a href="https://www.wisdompanel.com/en-us">Wisdom Panel</a> han desarrollado bases de datos genéticas extensas.</p>
+<table class="caption-top table">
+<thead>
+<tr class="header">
+<th>Producto</th>
+<th>Empresa</th>
+<th>Precio (USD)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><a href="https://shop.embarkvet.com/products/breed-and-health-dog-dna-test-kit"><u><strong>Breed + Health Dog DNA Test</strong></u></a></td>
+<td>Embark</td>
+<td>$130</td>
+</tr>
+<tr class="even">
+<td><a href="https://shop.embarkvet.com/products/embark-dog-dna-test-kit?variant=40103683784764"><u><strong>Breed ID Dog DNA Test</strong></u></a></td>
+<td>Embark</td>
+<td>$99</td>
+</tr>
+<tr class="odd">
+<td><a href="https://shop.embarkvet.com/products/dog-age"><u><strong>Dog Age Test</strong></u></a></td>
+<td>Embark</td>
+<td>$109</td>
+</tr>
+<tr class="even">
+<td><a href="https://shop.embarkvet.com/products/dog-gut-health-test"><u><strong>Gut Health Test</strong></u></a></td>
+<td>Embark</td>
+<td>$110</td>
+</tr>
+<tr class="odd">
+<td><a href="https://www.wisdompanel.com/en-us/dog-dna-tests/premium"><strong>Wisdom Panel™ Premium</strong></a></td>
+<td>Wisdom Panel</td>
+<td>$127.99</td>
+</tr>
+<tr class="even">
+<td><a href="https://www.wisdompanel.com/en-us/dog-dna-tests/essential"><strong>Wisdom Panel™ Essential</strong></a></td>
+<td>Wisdom Panel</td>
+<td>$95.99</td>
+</tr>
+<tr class="odd">
+<td><a href="https://www.wisdompanel.com/en-us/dog-dna-tests/breed-discovery"><strong>Wisdom Panel™ Breed Discovery</strong></a></td>
+<td>Wisdom Panel</td>
+<td>$99.99</td>
+</tr>
+<tr class="even">
+<td><a href="https://optimal-selection.com/products/optimal-selection-advanced-canine"><strong>Optimal Selection Advanced - Canine</strong></a></td>
+<td>Wisdom Panel</td>
+<td>$189.99</td>
+</tr>
+</tbody>
+</table>
 <p><strong>Innovación Local:</strong></p>
 <ul>
 <li><strong>Argentina</strong>: Creación de los primeros caballos editados genéticamente usando CRISPR-Cas9 en enero de 2025.</li>
